# Nav2_Dock_Robot

./: frames_2025-01-07_14.10.44.gv  frames_2025-01-12_13.20.08.gv
install/: local_setup.sh  setup.sh
install/auto_dock/lib/auto_dock/: demo.py  dock_test  test.py  try.py
install/auto_dock/share/auto_dock/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/auto_dock/share/auto_dock/launch/: dock_test.launch.py  tb3.launch.py
install/auto_dock/share/auto_dock/params/: dock_database.yaml  dock_server.yaml
log/: latest_build  latest_list
src/auto_dock/: CMakeLists.txt  package.xml
src/auto_dock/launch/: dock_test.launch.py  tb3.launch.py
src/auto_dock/map/: my_map.pgm
src/auto_dock/params/: dock_database.yaml  dock_server.yaml
src/auto_dock/src/: demo.py  test.py
